public_html/static/css/style.css
body{
	background-color: #eee;
}
.wrapper{
	background-color: #f5f5f5;
 	padding:10px 3%;
 	position: relative;
 	overflow: hidden;
}

/*add special border*/
.sB1{
	background-color: #eee;
	border-top: 2px solid #00aaaa;
	border-bottom: 2px solid #00aaaa;
	margin: 0 22px;
	height:44px;
	position: relative;
	line-height:40px!important;
	font-size: 1.5rem;
	font-weight:bold;
	user-select: none;
	display: block;
}
.sB1:before{
	content: "";
	height:44px;
	width: 22px;
	display: inline-block;
	position: absolute;
	right: -22px;
	top: -2px;
  background-image: url('../images/homepage-v3/sprite.png');
  background-position: -69px -350px;
}
.sB1:after{
	content: "";
	height:44px;
	width: 22px;
	display: inline-block;
	position: absolute;
	left: -22px;
	top: -2px;
  background-image: url('../images/homepage-v3/sprite.png');
  background-position: -46px -350px;
}
.sB1 a{
	padding: 0 0.5em;
	height: 40px;
	display: inline-block;
	color: #020558;
	transition:0.3s background;
}
.sB1 a:hover{
	background-color: rgba(0,0,0,0.05);
}
.sB1 a:focus{
	background-color: rgba(0,0,0,0.1);
}
.sB1 a.weAreHere{
	background-color: rgba(0,170,170, 0.1);
}
.sB2{
	margin: 0 22px;
	background-color: #020456;
	border-top: 2px solid #00aaaa;
	border-bottom: 2px solid #00aaaa;
	padding: 0 1em;
	line-height:40px!important;
	height:44px;
	font-size: 1.5rem;
	font-weight:bold;
	position: relative;
	user-select: none;
}
.sB2 a{
	color: #ccc;
	transition:0.3s color;
}
.sB2 a:hover{
	color: #fff
}
.sB2:before{
	content: "";
	height:44px;
	width: 22px;
	display: inline-block;
	position: absolute;
	right: -22px;
	top: -2px;
  background-image: url('../images/homepage-v3/sprite.png');
  background-position: -23px -350px;
}
.sB2:after{
	content: "";
	height:44px;
	width: 22px;
	display: inline-block;
	position: absolute;
	left: -22px;
	top: -2px;
  background-image: url('../images/homepage-v3/sprite.png');
  background-position: -0px -350px;
}
.sB3{
	margin: 0 100px 2em;
	padding: 0 1em;
	line-height:34px!important;
	height:34px;
	font-size: 2rem;
	font-weight:bold;
	position: relative;
	user-select: none;
	display: inline-block;
}
.sB3:before{
	content: "";
	height:34px;
	width: 100px;
	display: inline-block;
	position: absolute;
	right: -100px;
	top: 0;
  background-image: url('../images/homepage-v3/sprite.png');
  background-position: -202px -350px;
}
.sB3:after{
	content: "";
	height:34px;
	width: 100px;
	display: inline-block;
	position: absolute;
	left: -100px;
	top: 0;
  background-image: url('../images/homepage-v3/sprite.png');
  background-position: -100px -350px;
}

/*site header*/
#sHeader{
	background-color: #020558;
	background-image: url('../images/homepage-v3/header-pattern.png');
	height: 120px;
	background-position: center;
	color: #eee;
	user-select: none;
}
#sHeader .cn:before{
	content: "";
	height:3px;
	width: 100%;
	display: block;
	background-color: #a36b24;
}
#sHeader .brand{
	display: block;
	margin-top: 3px;
}
#sHeader .brand h1{
	display: none;
}
#sHeader .brand h2{
	display: none;
}
#sHeader .brand img
{
  height: 114px;
	width: 430px;
	display: block;
}
/*header lang*/
#sHeader .langlist{
	line-height: 25px;
	font-size: 12px;
	text-align: right;
}
.rtl #sHeader .langlist{
	text-align: left;
}
#sHeader .langlist a{
	color: #999;
	padding:0 .5em;
	transition:0.3s color;
	display:inline-block;
}
#sHeader .langlist a:hover{
	color: #aaa;
}
#sHeader .langlist a:focus{
	color: #bbb;
}
#sHeader .langlist a.isActive{
	color: #eee;
}
/*header hadith*/
#sHeader .hadith{
	color: #aaa;
	text-align: right;
	font-size: 12px;
	line-height: 25px;
	transition:0.3s;
	position: relative;
	top: 65px;
}
#sHeader .hadith:hover{
	color: #bbb;
}
.rtl #sHeader .hadith{
	text-align: left;
}
/*header nav*/
#sHeaderNav .wrapper{
	padding-top: 20px
}
#sHeaderNav .wrapper:before{
	content: "";
	height:2px;
	width: 100%;
	display: block;
	background-color: #00aaaa;
	top: 41px;
	right: 0;
	left: 0;
	position: absolute;
}

/* slider*/
.slider{
	margin-bottom:1em;
}
.goldenB{
	padding:2px;
	border: 1px solid #aa6622;
	border-radius:3px;
}
.slider img{
	display: block;
}
/* slavat*/
.salavat{
	text-align: center;
	font-size: 1.5em;
	position: relative;
	margin-bottom: 25px;
	user-select: none;
}
.salavat img{
	display: block;
	padding: 0;
	margin: 0 auto;
	width: 100%;
	max-width: 300px;
}
.salavat .counter{
	color: #020558;
	font-size: 2em;
	font-weight: bold;
	padding:10px 0 5px;

}
.salavat .Allah{
	position: absolute;
	bottom: -22px;
	right: 0;
	left: 0;
}
.salavat .Allah a{
	display: block;
}

/* sprite*/
[class^="sprite-"] {
  background-image: url('../images/homepage-v3/sprite.png');
  background-repeat: no-repeat;
  background-position: 1000px 1000px;
}
.sprite-servants{
	width: 140px;
	height: 140px;
  background-position: -420px 0;
  margin: 0 auto;
  transition: 0.3s;
}
.sprite-servants:hover{
  background-position: -420px -140px;
}
.sprite-virtual{
	width: 140px;
	height: 140px;
  background-position: -560px 0;
  margin: 0 auto;
  transition: 0.3s;
}
.sprite-virtual:hover{
  background-position: -560px -140px;
}
.sprite-travel{
	width: 140px;
	height: 140px;
  background-position: -700px 0;
  margin: 0 auto;
  transition: 0.3s;
}
.sprite-travel:hover{
  background-position: -700px -140px;
}
.sprite-deputy{
	width: 140px;
	height: 140px;
  background-position: -280px 0;
  margin: 0 auto;
  transition: 0.3s;
}
.sprite-deputy:hover{
  background-position: -280px -140px;
}
.sprite-lottory{
	width: 140px;
	height: 140px;
  background-position: 0 0;
  margin: 0 auto;
  transition: 0.3s;
}
.sprite-lottory:hover{
  background-position: 0 -140px;
}

.sprite-farahzad{
	width: 140px;
	height: 140px;
  background-position: -840px 0;
  margin: 0 auto;
}
.sprite-farahzad:hover{
  background-position: -840px -140px;
}
.sprite-imani{
	width: 140px;
	height: 210px;
  background-position: -980px 0;
  margin: 0 auto;
}
.sprite-imani:hover{
  background-position: -980px -210px;
}
.sprite-adminContact{
	width: 140px;
	height: 140px;
  background-position: -140px 0;
  margin: 0 auto;
}
.sprite-adminContact:hover{
  background-position: -140px -140px;
}

.picto{
	text-align: center;
}
.picto a{
	display: block;
	margin-bottom: 2em;
}
.picto h2{
	margin-top: 1em;
}

.billingInfo{
	/*padding: 5em 0 3em;*/
	font-size: 1.5em;
}
.billingInfo h2{
}

.latestNews{
	font-size: 1.3em;
}
.latestNews img{
	display: block;
}
.latestNews .list{
	height: 100%;
}
.latestNews .list a{
	background-color: #eee;
	transition: 0.3s;
	padding:5px 1.2em;
	overflow: hidden;
	position: relative;
}
.latestNews .list a.archiveLink{
	background-color: #ddd;
	height: 35px;
	max-height: 35px;
	line-height: 25px;
}
.latestNews .list a:hover{
	background-color: #ccc;
}
.latestNews .list a.active{
	background-color: #aa6622;
	overflow: visible;
	color: #fff
}
.latestNews .list a.active::before{
  content: "";
  width: 0;
  height: 0;
  border-top: 15px solid transparent;
  border-bottom: 15px solid transparent;
  border-left: 15px solid #aa6622;
  position: absolute;
  right: -15px;
  z-index: 2;
}








@media all and (min-width: 768px) and (max-width: 959px) {
	.sB3{
		margin: 0 50px 1em;
		font-size: 2rem;
	}
	.sB3:before{
		width: 50px;
		right: -50px;
	  background-position: -202px -350px;
	}
	.sB3:after{
		width: 50px;
		left: -50px;
	  background-position: -140px -350px;
	}
}


@media (max-width: 767px) {
	#sHeader .cn{

	}
	.sB2{
		margin:0 auto;
	}
	.sB3{
		margin: 0 30px 1em;
		padding: 0;
		line-height:1.2!important;
		height:auto;
		font-size: 2rem;
	}
	.sB3:before{
		width: 30px;
		right: -30px;
	  background-position: -202px -350px;
	}
	.sB3:after{
		width: 30px;
		left: -30px;
	  background-position: -170px -350px;
	}
}

